# sudoku_explainer

./: .gitignore  README.md  render.yaml
backend/: conftest.py  pyproject.toml  requirements.txt
backend-canvas/: README.md  pyproject.toml
backend-canvas/app/: config.py  deps.py  main.py  schemas.py
backend-canvas/app/canvas/: client.py
backend-canvas/app/routers/: assignments.py  dates.py  health.py  late_policy.py  rename.py
backend-canvas/app/services/: assignments.py  dates.py  late_policy.py  rename.py
backend-canvas/tests/: test_dates.py  test_late_policy.py  test_rename.py
backend/app/: main.py  schemas.py  solver.py
backend/tests/: test_solver.py
frontend/: index.html  package-lock.json  package.json
frontend-canvas/: index.html  package-lock.json  package.json  vite.config.ts
frontend-canvas/src/: App.tsx  index.css  types.ts
frontend-canvas/src/components/: ClearPanel.tsx  DatesPanel.tsx  DatesPreviewTable.tsx  ProgressList.tsx  RenamePreviewTable.tsx  RulesEditor.tsx  SearchBox.tsx  SessionBadge.tsx  ShortenNamesPanel.tsx  TokenForm.tsx  TotalsCard.tsx
frontend-canvas/src/components/ui/: button.tsx  checkbox.tsx  tabs.tsx
frontend-canvas/src/lib/: canvas.ts  dates.ts  rename.ts  rulesStorage.ts  session.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: LpInspector.tsx  SoftConstraintsPanel.tsx  SudokuCell.tsx  SudokuGrid.tsx  Toolbar.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/lib/: api.ts  sudoku.ts
