[project]
name = "sudoku-explainer-backend"
version = "0.1.0"
description = "FastAPI + PuLP backend for the Sudoku explainer demo"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pulp>=2.9.0",
    "pydantic>=2.8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
